# roasted

./: coffee_roasting_app_plan.md  main.py  package-lock.json  package.json  proxy.ts  pyproject.toml  rxconfig.py
.claude/agents/: reflex-fullstack-dev.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/resolved/: build-type-errors.md
.planning/phases/01-roast-capture-logs/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-roast-capture-logs-VERIFICATION.md
.planning/phases/02-inventory-history/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-inventory-history-VERIFICATION.md
.planning/phases/03-roast-comparison/: 03-01-PLAN.md  03-01-SUMMARY.md  03-01-VERIFICATION.md  03-RESEARCH.md  03-roast-comparison-UAT.md
.planning/phases/04-private-access-gate/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
public/: sw.js
roasted/: roasted.py
roasted/components/: __init__.py  navbar.py
roasted/models/: __init__.py  database.py
roasted/pages/: __init__.py  history.py  inventory.py  timer.py
roasted/state/: __init__.py  app_state.py
src/app/: PwaServiceWorker.tsx  layout.tsx  manifest.ts  page.tsx
src/data/: adjustments.ts  coffees.ts  db.ts  lots.ts  roasts.ts
(+33 files in other folders)
