[project]
name = "roasted"
version = "0.1.0"
description = "Coffee roasting tracker"
requires-python = ">=3.11"
dependencies = ["reflex>=0.8.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.403",
]

[tool.pyright]
reportArgumentType = false
reportAttributeAccessIssue = false
